--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         </ul>
         <ul class="rodapeBB_lista">
             <h2 class="rodape-BB_texto">Projetos publicados</h2>
-            <li><a class="rodapeBB_link" href="https://alura-book-responsivo.vercel.app">Alura Book</a></li>
+            <li><a class="rodapeBB_link" href="projeto-bbank-lz3nd41mt-brunomotabr.vercel.app">Site Bbank</a></li>
             <li><a class="rodapeBB_link" href="https://alura-book-theta.vercel.app">Acesso a APIs</a></li>
             <li><a class="rodapeBB_link" href="https://alura-plus-psi-rosy.vercel.app">Alura +</a></li>
             <li><a class="rodapeBB_link" href="https://alura-midi-murex.vercel.app">Alura midi</a></li>
@@ -142,6 +142,7 @@
             <li><a class="rodapeBB_link" href="https://github.com/BrunoMotaBr/PHP">PHP</a></li>
             <li><a class="rodapeBB_link" href="https://github.com/BrunoMotaBr/Livro_de_receitas">Django</a></li>
         </ul>
+        
     </footer>
     <script src="main.js"></script>
 </body>
